[package]
name = "i-o"
version = "0.2.2"
authors = ["M Farkas-Dyck <strake888@gmail.com>"]
description = "Input and output"
license = "MIT OR Apache-2.0"

[lib]
name = "io"

[dependencies]
containers = "0.7"
void = { version = "1", default-features = false }

[dev-dependencies]
quickcheck = "0.4"
quickcheck_macros = "0.4.2"
