[package]
name = "i-o"
version = "0.4.4"
authors = ["M Farkas-Dyck <strake888@gmail.com>"]
description = "Input and output"
license = "MIT OR Apache-2.0"

[lib]
name = "io"

[dependencies]
containers = { version = ">=0.8, <0.10", default-features = false, features = ["default_allocator"] }
loca = ">=0.6, <0.8"
void = { version = "1", default-features = false }

[dev-dependencies]
quickcheck = "0.7"
quickcheck_macros = "0.7"
rand = "0.6"
